update reservation routes
